fixed contact page overflowing

--- a/assets/css/pages/_contact.scss
+++ b/assets/css/pages/_contact.scss
@@ -16,6 +16,7 @@
       z-index: 100;
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
 
       top: 30vh;
       left: 30%;
